--- a/index.html
+++ b/index.html
@@ -3,38 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarah's Games</title>
+    <title>Sjove Spil</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Sarah's World of Games!</h1>
-        <p>Hi! I'm Sarah, I'm 8 years old, and I love making games. Check them out below!</p>
-    </header>
-
-    <main>
-        <section class="game-list">
-            <h2>My Games</h2>
-            <div class="game-card">
-                <h3>Game 1 Title</h3>
-                <p>A short and fun description of the first game.</p>
-                <a href="#">Play Now!</a>
+    <h1>Sjove Spil</h1>
+    <div id="game-list">
+        <a href="Blomsterhaven/index.html" class="game-link">
+            <div class="screenshot-placeholder">
+                <img src="blomsterhaven_screenshot.png" alt="Screenshot of Blomsterhaven">
             </div>
-            <div class="game-card">
-                <h3>Game 2 Title</h3>
-                <p>A short and fun description of the second game.</p>
-                <a href="#">Play Now!</a>
-            </div>
-            <div class="game-card">
-                <h3>Game 3 Title</h3>
-                <p>A short and fun description of the third game.</p>
-                <a href="#">Play Now!</a>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Sarah's Games. Made with &hearts;</p>
-    </footer>
+            <h2>Blomsterhaven</h2>
+            <p>Plant og pas din egen have!</p>
+        </a>
+        <!-- Other games can be added here -->
+    </div>
 </body>
 </html>
